--- a/default.css
+++ b/default.css
@@ -4,20 +4,23 @@ html, body {
 
 body {
 	margin: 0px;
-	padding: 0px;
+	padding: 0px ;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 12pt;
 	font-weight: 400;
+
+
 	
 }
 
 h1, h2, h3 {
-	margin: 0;
+	margin: 10px;
 	padding: 0;
 	text-transform: uppercase;
 	font-weight: 300;
 	color: #2D2D2D;
 }
+
 
 h2 {
 	padding: 0px 0px 30px 0px;
@@ -60,8 +63,8 @@ text-align: center;
 	margin: 0px 20px;
 }
 
-.container {
-	width: 1200px;
+.container, .text {
+	width: 90%;
 	margin: 0px auto;
 }
 
@@ -79,17 +82,30 @@ text-align: center;
 	
 }
 
-#header {
-	position: relative;   /*розмер картинки с верху */
+#header {  /*розмер картинки с верху */
 	overflow: hidden;
-	height: 400px;
+	margin: auto;
+	height: auto;
+}
+
+/*Мобильное меню*/
+#wrapper .mobile_menu{
+	display: none;	
+	border-radius: 4px;
+	padding: 0 20px 0 15px;
+	width: auto;
+	height: auto;
+	cursor: pointer;
+	position: absolute;
+	font-size: 50px;
+	top: 0;
 }
 
 #social
-{
-	position: absolute;   /*сылка на  блог */
-	top: 20em;
-	right: 0;
+{  /*сылка на  блог */
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
 }
 
 #social a 
@@ -98,10 +114,7 @@ text-align: center;
 }
 /* Логотип  */
 #logo {
-	position: absolute;  /*название сайта */
-	top: 3em;
-	left: 0;
-
+	margin: 40px;
 }
 
 #logo h1, #logo p {
@@ -113,7 +126,7 @@ text-align: center;
 	font-weight: 400;
 	letter-spacing: -1px;         /*название сайта */
 	text-transform: lowercase;
-	font-size: 3.5em;
+	font-size: 44px;
 	color: #0b56aa;
 	text-align: center;
 
@@ -129,24 +142,20 @@ text-align: center;
 /* меню */
 
 #menu {
-	overflow: hidden;    /* фон меню */
+	/*overflow: hidden;    /* фон меню */
 	background: #3c6ca1;   
 }
 
-#menu ul {
-	margin: 0px 0px 0px 0px;    /* настройки пунктов  меню */
-	padding: 0px 0px;
+#menu > ul {
+	padding: 0;
 	list-style: none;
 	line-height: normal;
+	display: flex;
+	justify-content: space-around;
 }
 
-#menu li {
-	display: inline-block;
-}
 
 #menu a {
-	display: block;
-	padding: 0px 40px 0px 40px;
 	line-height: 70px;
 	text-decoration: none;				 /* ЦВЕТ СЫЛОК  меню */
 	text-transform: uppercase;   
@@ -161,8 +170,25 @@ text-align: center;
 	text-decoration: none;
 	color: rgba(255,255,255,0.8);
 }
+#menu .menu_item ul{
+	padding: 0 30px;
+	display: flex;
+	flex-direction: column;
+	opacity: 0;
+	position: absolute;
+	background: #3c6ca1;
+	z-index: -9999;
+}
 
-#menu .current_page_item a {
+#menu .menu_item:hover ul{
+	opacity: 1;
+	z-index: 9999;
+
+}
+
+#menu .menu_item ul > li{
+	list-style: none;
+	border-top: 1px solid rgba(255, 255, 255, .2);
 }
 
 #menu .last {
@@ -174,67 +200,32 @@ text-align: center;
 #page {
 	overflow: hidden;
 	padding: 5em 0em;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: flex-end;
 }
 
-	#page .title
-	{
-		margin-bottom: 2em;   /*отступ между названием проф и картинкой*/
-	}
+#page .page-col{
+	flex-wrap: wrap;
+	height: 100%;
+	width: 22%;
+	font-size: 12px;
+}
+
+#page .page-col img{
+	width: 100%;
+}
 
 	#page .title h2
 	{
-		font-size: 1.5em; 		/*параметры шрифта професйи*/
+		width: 100%;
+		font-size: 1.3em; 		/*параметры шрифта професйи*/
 		font-weight: 400;     
 		color: #3c6ca1;
 	}
 	
-
-
-
-/* Footer */
-
-#footer {
-	overflow: hidden;  				/*запрошуемо на навчання отступ с низу*/
-	padding: 50px 0px 30px 0px;
-}
-
-#footer p {
-	text-align: center;				/*запрошуемо на навчання параметры текста*/
-		color: rgba(0,0,0,0.7);
-}
-
-#footer a {
-		color: rgba(0,0,0,0.7);		/*запрошуемо на навчання параметры сылки*/
-}
-
-	/*Блоки професи*/
-	.column2,
-	.column3,
-	.column4     
-
-	{
-		font-size: 12px;
-		width: 282px;
-	}
-	.column2{
-		margin-bottom: 10px;
-	}
-	.column2,
-	.column3
-	{
-		font-size: 12px;
-		float: left;
-		margin-right: 24px;
-	}
-	
-	.column4
-	{
-		float: right;
-	}
-	.column5 
-	{
-		font-size: 12px;
-	}
 
 	ul.contact li
 	{
@@ -248,3 +239,20 @@ text-align: center;
 	{
 		width: 100%;
 	}
+
+/* Footer */
+
+#footer {
+	overflow: hidden;  				/*запрошуємо на навчання отступ снизу*/
+	padding: 50px 0px 30px 0px;
+}
+
+#footer p {
+	text-align: center;				/*запрошуємо на навчання параметры текста*/
+		color: rgba(0,0,0,0.7);
+}
+
+#footer a {
+		color: rgba(0,0,0,0.7);		/*запрошуемо на навчання параметры сылки*/
+}
+
